# cs3110_compiler

./: .gitignore  .ocamlformat  .ocamlinit  INSTALL.md  Makefile  README.md  README.md.template  cs3110_compiler.opam  dune  dune-project  func.x86istmb  project.yaml  readme.py  start.swift  x86ISTMB.opam
lib/: analysis.ml  analysis.mli  ast.ml  basic_block.ml  basic_block.mli  cli.ml  context.mli  control_flow_graph.ml  control_flow_graph.mli  digraph.ml  dune  id.ml  interpreter.ml  interpreter.mli  ir.ml  label.ml  label.mli  lexer.mll  meta.ml  parse_lex.ml  parser.mly  scope.ml  scope.mli  tui.ml  type.ml  util.ml  value.ml
lib/backend/: asm.ml  asm.mli  asmClean.ml  asmEmit.ml  asmEmit.mli  asm_clean.ml  asm_clean.mli  asm_emit.ml  asm_emit.mli  liveliness.ml  liveliness.mli  x86.ml
lib/backend/asm/: register.ml  register.mli
lib/backend/regalloc/: instrOrdering.ml  instrOrdering.mli  regalloc.ml  regalloc.mli
lib/core/: rep_ok.ml  util.ml
lib/frontend/: analysis.ml  analysis.mli  ast.ml  ast.mli  astType.ml  context.ml  context.mli  dune  irGen.ml  irGen.mli  ir_gen.ml  ir_gen.mli  lexer.mll  parseLex.ml  parseLex.mli  parse_lex.ml  parser.mly  type.ml  type.mli
lib/interpreter/: dune  interpreter.ml  interpreter.mli  scope.ml  scope.mli  value.ml
lib/interpreter_old/: .interpreter.ml  .scope.ml  .scope.mli
lib/ir/: basicBlock.ml  basicBlock.mli  basic_block.ml  basic_block.mli  branch_condition.ml  branch_condition.mli  id.ml  id.mli  instr.ml  ir.ml  ir.mli  irSim.ml  ir_sim.ml  ir_sim.mli  label.mli  operand.ml  operand.mli  pass.ml  pass.mli  passes.ml  passes.mli  simulator.ml  simulator.mli  stringLiteral.ml  stringLiteral.mli  variable.ml  variable.mli
lib/ir/cfg/: cfg.ml  cfg.mli  control_flow_graph.mli  digraph.ml  digraph.mli
lib/ir/map/: idMap.ml  idMap.mli  variableMap.ml  variableMap.mli
lib/runtime/: integrity.nasm  linkonce.x  preamble.x  x86istimb_debug_print.c  x86istmb_main.c
lib/runtime/include/: mangle.h  types.h  x86istmb.h
lib/runtime/linux/: x86istmb_debug_print.c  (+2 more)
lib/user/: cli.ml  cli.mli  driver.ml  driver.mli  meta.ml  meta.mli
lib/util/: platform.ml  platform.mli  rep_ok.ml  rep_ok.mli  util.ml  util.mli
(+118 files in other folders)
