(include_subdirs unqualified)

(library
 (name x86ISTMB)
 (libraries batteries menhirLib)
 (preprocess
  (pps ppx_inline_test))
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -w -69)))

(rule
 (targets project_root.ml)
 (deps ../script/generate_project_root.ml)
 (action
  (run ocaml ../script/generate_project_root.ml)))
